--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="CSS/gallery.css" />
   </head>
   <body>
+    <h1>Responsive Gallery</h1>
     <div class="grid-container">
       <img
         src="https://source.unsplash.com/collection/190727/800x600?1"
@@ -53,10 +54,6 @@
       />
       <img
         src="https://source.unsplash.com/collection/190727/800x600?9"
-        alt="just a image"
-      />
-      <img
-        src="https://source.unsplash.com/collection/190727/800x600?10"
         alt="just a image"
       />
     </div>
